<resources>

    <!--App Name and Activity Name-->
    <string name="app_name">WeGit</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">WeGit</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_fo">FoActivity</string>
    <string name="title_activity_reop">ReopActivity</string>
    <string name="title_activity_file_tree">FileTreeActivity</string>
    <string name="title_activity_code">CodeActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_setting">Setting</string>


    <!--menuitem name-->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>


    <!--Error warning-->
    <string name="fail_load">Fail! Check the Network</string>
    <string name="fail_loadMore">Fail to load more! Check the Network</string>
    <string name="developing">This module is under development!</string>
    <string name="network_error">Please check your network</string>
    <string name="auth_error">Username or password is incorrect</string>
    <string name="over_auth_error">Maximum number of login attempts exceeded. Please try again later.</string>
    <string name="fail_follow">Fail to follow </string>
    <string name="fail_unfollow">Fail to unfollow </string>
    <string name="fail_load_relation">Fail to load relation</string>
    <string name="fail_load_userInfo">Fail to load information of </string>
    <string name="fail_auth_user">Fail to init your information,You have to check you network condition or try it later. </string>
    <string name="fail_load_content">Fail to load file content</string>
    <string name="fail_init_warning">Fail to initial</string>


    <!--warning-->
    <string name="try_again">Try Again</string>
    <string name="input_complete">Input your username and password</string>
    <string name="login">Login...</string>
    <string name="initial">Initialing...</string>
    <string name="forked">"You have forked this repo"</string>


    <!--Description-->
    <string name="search_warning">You can input keywords to search user or repository，，，</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="branches">Branch</string>
    <string name="searchType">Search Setting</string>

    <!--Button Text-->
    <string name="btn_login">Login</string>


    <!--Search-->
    <string-array name="search_type">
        <item>Search User</item>
        <item>Search Repository</item>
    </string-array>

    <!--Language-->
    <string-array name="language">
        <item>All language</item>
        <item>Unknown Language</item>
        <item>Javascript</item>
        <item>Java</item>
        <item>CSS</item>
        <item>C</item>
        <item>C++</item>
        <item>Python</item>
        <item>Html</item>
        <item>Go</item>
    </string-array>

    <string-array name="Time">
        <item>Today</item>
        <item>This Week </item>
        <item>This Month</item>
    </string-array>

    <string-array name="language_param">
        <item></item>
        <item>unknown</item>
        <item>Javascript</item>
        <item>java</item>
        <item>css</item>
        <item>c</item>
        <item>cpp</item>
        <item>python</item>
        <item>html</item>
        <item>go</item>
    </string-array>


    <string name="search">Search</string>
    <string name="search_user">Search User</string>
    <string name="search_repository">Search Repository</string>
    <string name="search_result_count"> search results</string>


    <!--Email-->
    <string name="email_body">This is Content</string>
    <string name="email_title">This is Titl</string>


    <!-- TTF fonts-->
    <string name="icon_star" translatable="false">\uf02a</string>
    <string name="icon_email" translatable="false">\uf03b</string>
    <string name="icon_locate" translatable="false">\uf060</string>
    <string name="icon_company" translatable="false">\uf037</string>
    <string name="icon_blog" translatable="false">\uf05c</string>
    <string name="icon_join" translatable="false">\uf046</string>
    <string name="icon_repo" translatable="false">\uf001</string>
    <string name="icon_push" translatable="false">\uf01f</string>
    <string name="icon_pullRequest" translatable="false">\uf009</string>
    <string name="icon_commit" translatable="false">\uf07e</string>
    <string name="icon_fork" translatable="false">\uf002</string>
    <string name="icon_branch" translatable="false">\uf020</string>
    <string name="icon_organization" translatable="false">\uf037</string>
    <string name="icon_code" translatable="false">\uf05f</string>
    <string name="icon_issue" translatable="false">\uf026</string>
    <string name="icon_tag" translatable="false">\uf015</string>


    <!--Commom-->
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>


    <!-- USER INFO -->
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="blog">Blog</string>
    <string name="join">Join</string>
    <string name="company">Company</string>
    <string name="title_activity_readme">ReadmeActivity</string>

    <string name="hello_world">Hello world!</string>

    <!-- Taking-Data event-->
    <string name="td_click_login">“点击登录”</string>
    <string name="td_event_login_success">“登录成功”</string>
    <string name="td_event_login_fail">“登录失败”</string>
    <string name="td_event_token_existed">“擦除更新Token”</string>
    <string name="td_event_token_created">“新建Token”</string>
    <string name="td_event_token_overtry">“登录失败超过次数”</string>

    <string name="Trending">Trending</string>
    <string name="Search">Search</string>
    <string name="Friends">Friends</string>
    <string name="Home">Home</string>

    <string name="repository">Repository</string>
    <string name="user">User</string>
    <string name="language">Lauguage</string>
    <string name="since">Since</string>


    <string name="since_today">  stars today</string>
    <string name="since_weekly"> stars this week</string>
    <string name="since_month"> stars this month</string>


</resources>
