<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/friends"
            android:title="@string/Friends" />
        <item
            android:id="@+id/nav_search"
            android:icon="@mipmap/search"
            android:title="@string/Search" />
        <item
            android:id="@+id/nav_trending"
            android:icon="@mipmap/trending"
            android:title="@string/Trending"
            />
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/setting"
                android:title="Setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/about"
                android:title="About" />
        </menu>
    </item>

</menu>
